Fix collapse & select styles

--- a/src/styles/antd.css
+++ b/src/styles/antd.css
@@ -2432,7 +2432,7 @@ html {
   padding-right: 18px;
 }
 .ant-select-single.ant-select-open .ant-select-selection-item {
-  color: var(--gray-6);
+  color: var(--text-color-secondary-dark);
 }
 .ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
   width: 100%;
@@ -19026,23 +19026,23 @@ textarea.ant-input {
   margin: 0;
   padding: 0;
   color: var(--text-color);
-  font-size: 14px;
+  font-size: var(--font-size-base);
   font-variant: tabular-nums;
   line-height: var(--line-height-base);
   list-style: none;
-  -webkit-font-feature-settings: 'tnum';
-  font-feature-settings: 'tnum';
+  -webkit-font-feature-settings: var(--font-feature-settings-base);
+  font-feature-settings: var(--font-feature-settings-base);
   background-color: var(--collapse-header-bg);
-  border: 1px solid var(--gray-5);
+  border: var(--border-width-base) var(--border-style-base) var(--gray-5);
   border-bottom: 0;
-  border-radius: var(--border-radius-xxs);
+  border-radius: var(--collapse-panel-border-radius);
 }
 .ant-collapse > .ant-collapse-item {
-  border-bottom: 1px solid var(--gray-5);
+  border-bottom: var(--border-width-base) var(--border-style-base) var(--gray-5);
 }
 .ant-collapse > .ant-collapse-item:last-child,
 .ant-collapse > .ant-collapse-item:last-child > .ant-collapse-header {
-  border-radius: 0 0 2px 2px;
+  border-radius: 0 0 var(--collapse-panel-border-radius) var(--collapse-panel-border-radius);
 }
 .ant-collapse > .ant-collapse-item > .ant-collapse-header {
   position: relative;
@@ -19157,7 +19157,7 @@ textarea.ant-input {
 .ant-collapse-content {
   color: var(--text-color);
   background-color: var(--collapse-content-bg);
-  border-top: 1px solid var(--gray-5);
+  border-top: var(--border-width-base) var(--border-style-base) var(--gray-5);
 }
 .ant-collapse-content > .ant-collapse-content-box {
   padding: var(--collapse-content-padding);
@@ -19166,14 +19166,14 @@ textarea.ant-input {
   display: none;
 }
 .ant-collapse-item:last-child > .ant-collapse-content {
-  border-radius: 0 0 2px 2px;
+  border-radius: 0 0 var(--collapse-panel-border-radius) var(--collapse-panel-border-radius);
 }
 .ant-collapse-borderless {
   background-color: var(--gray-2);
   border: 0;
 }
 .ant-collapse-borderless > .ant-collapse-item {
-  border-bottom: 1px solid var(--gray-5);
+  border-bottom: var(--border-width-base) var(--border-style-base) var(--gray-5);
 }
 .ant-collapse-borderless > .ant-collapse-item:last-child,
 .ant-collapse-borderless > .ant-collapse-item:last-child .ant-collapse-header {
